--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,7 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "src/components/Contact/Contact.js"  ],
+    "**/*.tsx"],
   "exclude": [
     "node_modules"
   ]
